[maven-release-plugin] prepare release jgrapht-1.5.0

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>jgrapht</artifactId>
     <packaging>pom</packaging>
     <name>JGraphT - Parent</name>
-    <version>1.4.1-SNAPSHOT</version>
+    <version>1.5.0</version>
     <description>A Java class library for graph-theory data structures and algorithms.</description>
     <url>http://www.jgrapht.org</url>
     <parent>
@@ -29,7 +29,7 @@
         <url>https://github.com/jgrapht/jgrapht.git</url>
         <connection>scm:git:git://github.com/jgrapht/jgrapht.git</connection>
         <developerConnection>scm:git:git@github.com:jgrapht/jgrapht.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jgrapht-1.5.0</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/jgrapht/jgrapht/issues</url>
