--- a/jgrapht-dist/pom.xml
+++ b/jgrapht-dist/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht</artifactId>
-        <version>1.5.0</version>
+        <version>1.5.1-SNAPSHOT</version>
     </parent>
     <artifactId>jgrapht-dist</artifactId>
     <name>JGraphT - Distributable Archives</name>
