--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ dist: trusty
 jdk:
   - oraclejdk11
 node_js:
-  - 10
+  - "node"
 before_install:
+  - nvm install lts/*
   - npm install -g hercule
 script:
   - set -e
