--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
   - "node"
 before_install:
   - nvm install lts/*
-  - npm install -g hercule
+  - npm install -g hercule@5.0.0
 script:
   - set -e
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn verify -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
