--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 node_js:
   - "node"
 before_install:
-  - nvm install lts/*
+  - nvm install 14.4.0
   - npm install -g hercule@5.0.0
 script:
   - set -e
