Ignore deploy errors for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn verify -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
   - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then etc/prepareDocs.sh; fi
 after_success:
+  - set +e
   - if [ "$TRAVIS_BRANCH" = "master" ]; then mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml; fi
 deploy:
   provider: pages
