Avoid import of own jgrapht-packages in MANIFEST.MF (#952)
* Avoid jgrapht-package self import in MANIFEST.MF

* Remove Apache-Felix config in jgrapht-dist/pom & add explanatory comment

--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -31,9 +31,9 @@
             <version>0.13</version>
         </dependency>
         <dependency>
-               <groupId>com.googlecode.junit-toolbox</groupId>
-               <artifactId>junit-toolbox</artifactId>
-               <scope>test</scope>
+            <groupId>com.googlecode.junit-toolbox</groupId>
+            <artifactId>junit-toolbox</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
@@ -62,6 +62,12 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <!-- Suppress import of own exported packages -->
+                        <Import-Package>!org.jgrapht.*,*</Import-Package>
+                    </instructions>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -88,7 +94,7 @@
                     <groups>org.jgrapht.SlowTests</groups>
                     <excludedGroups>org.jgrapht.OptionalTests</excludedGroups>
                 </configuration>
-                  </plugin>
+            </plugin>
         </plugins>
     </build>
 </project>
