--- a/jgrapht-guava/pom.xml
+++ b/jgrapht-guava/pom.xml
@@ -41,6 +41,12 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <!-- Suppress import of own exported packages -->
+                        <Import-Package>!org.jgrapht.guava.*,*</Import-Package>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -86,7 +92,7 @@
                     <groupId>com.google.guava</groupId>
                     <artifactId>listenablefuture</artifactId>
                 </exclusion>
-                  </exclusions>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
