--- a/jgrapht-io/pom.xml
+++ b/jgrapht-io/pom.xml
@@ -41,6 +41,12 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <!-- Suppress import of own exported packages -->
+                        <Import-Package>!org.jgrapht.nio.*,*</Import-Package>
+                    </instructions>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.antlr</groupId>
