--- a/pom.xml
+++ b/pom.xml
@@ -345,8 +345,9 @@
                             <configLocation>etc/jgrapht_checks.xml</configLocation>
                             <linkXRef>false</linkXRef>
                             <sourceDirectories>${project.basedir}</sourceDirectories>
-                            <includes>src/main/**/*.java,**/*.xml</includes>
+                            <includes>src/main/**/*.java,src/test/**/*.java,**/*.xml</includes>
                             <excludes>**/target/**</excludes>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                         </configuration>
                     </plugin>
                 </plugins>
