--- a/pom.xml
+++ b/pom.xml
@@ -149,14 +149,15 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
+                    <version>3.0.0-M5</version>
                     <configuration>
                         <testFailureIgnore>false</testFailureIgnore>
+                        <useSystemClassLoader>false</useSystemClassLoader>
                     </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                     <version>3.0.0-M4</version>
+                     <version>3.0.0-M5</version>
                      <dependencies>
                           <dependency>
                                <groupId>org.apache.maven.surefire</groupId>
