--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>jgrapht-unimi-dsi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>jgrapht-demo</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -183,7 +188,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>4.2.1</version>
+                    <version>5.1.1</version>
                     <executions>
                         <execution>
                             <phase>process-classes</phase>
@@ -313,6 +318,7 @@
         <module>jgrapht-opt</module>
         <module>jgrapht-ext</module>
         <module>jgrapht-guava</module>
+        <module>jgrapht-unimi-dsi</module>
         <module>jgrapht-demo</module>
         <module>jgrapht-dist</module>
     </modules>
