--- a/jgrapht-unimi-dsi/pom.xml
+++ b/jgrapht-unimi-dsi/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>jgrapht-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jgrapht-opt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
             <version>8.5.2</version>
