[Build] Use -noimport instruction of maven-bundle-plugin (#736) (#1045)
Use the -noimport BND-tools instruction instead of specifying exclusions
for own packages in the Import-Package instruction.
See https://bnd.bndtools.org/heads/export_package.html for details.

Excluding exported packages from being (self-)imported was necessary in
order to solve JGraphT issue #736. This change simplifies the solution.

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
                     <version>5.1.1</version>
+                    <configuration>
+                        <instructions>
+                            <!-- Suppress import of own exported packages -->
+                            <Export-Package>*;-noimport:=true</Export-Package>
+                        </instructions>
+                    </configuration>
                     <executions>
                         <execution>
                             <phase>process-classes</phase>
