--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
     </parent>
     <artifactId>jgrapht-ext</artifactId>
     <name>JGraphT - Ext</name>
