--- a/jgrapht-guava/pom.xml
+++ b/jgrapht-guava/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
     </parent>
     <artifactId>jgrapht-guava</artifactId>
     <name>JGraphT - Guava Adapter</name>
