--- a/jgrapht-io/pom.xml
+++ b/jgrapht-io/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
     <artifactId>jgrapht-io</artifactId>
     <name>JGraphT - I/O</name>
