--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>jgrapht</artifactId>
     <packaging>pom</packaging>
     <name>JGraphT - Parent</name>
-    <version>1.5.1</version>
+    <version>1.5.2-SNAPSHOT</version>
     <description>A Java class library for graph-theory data structures and algorithms.</description>
     <url>http://www.jgrapht.org</url>
     <parent>
