--- a/.github/workflows/master-workflow.yaml
+++ b/.github/workflows/master-workflow.yaml
@@ -3,6 +3,13 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'CONTRIBUTORS.md'
+      - 'HISTORY.md'
+
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -13,10 +20,10 @@ jobs:
         with:
           persist-credentials: false
 
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: 11
-          architecture: x64
+          distribution: 'zulu'
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -33,7 +40,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          architecture: x64
       - run: npm install -g hercule@5.0.0
 
       - name: Run prepareDocs script
@@ -48,9 +54,9 @@ jobs:
         shell: bash
 
       - name: Publish Github Pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          ACCESS_TOKEN: ${{ secrets.PAGES_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs
-          CLEAN: true
+          token: ${{ secrets.PAGES_TOKEN }}
+          branch: gh-pages
+          folder: docs
+          clean: true
