--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -31,6 +31,11 @@
             <version>0.14</version>
         </dependency>
         <dependency>
+            <groupId>org.apfloat</groupId>
+            <artifactId>apfloat</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.junit-toolbox</groupId>
             <artifactId>junit-toolbox</artifactId>
             <scope>test</scope>
