--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
+            <artifactId>junit-platform-suite-engine</artifactId>
             <version>1.8.1</version>
             <scope>test</scope>
         </dependency>
