--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -26,6 +26,18 @@
     </licenses>
     <dependencies>
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jheaps</groupId>
             <artifactId>jheaps</artifactId>
             <version>0.14</version>
@@ -34,11 +46,6 @@
             <groupId>org.apfloat</groupId>
             <artifactId>apfloat</artifactId>
             <version>1.10.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.junit-toolbox</groupId>
-            <artifactId>junit-toolbox</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
